# reqres-api-robot

./: README.md  pyproject.toml
testcases/user/: get_user_profile.robot
